<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.0</version>
		<relativePath/> </parent>
	<groupId>gov.govcirvle</groupId>
	<artifactId>govcircle</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>govcircle</name>
	<description>govcircle</description>
	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>21</maven.compiler.source>
		<yaci-store.version>2.0.0</yaci-store.version>
		<cardano.client.lib.version>0.7.1</cardano.client.lib.version>
		<jjwt.version>0.11.5</jjwt.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency><dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>io.adabox</groupId>
			<artifactId>ogmios-java-client</artifactId>
			<version>1.0.0</version>
		</dependency>

		<dependency>
			<groupId>com.bloxbean.cardano</groupId>
			<artifactId>cardano-client-lib</artifactId>
			<version>${cardano.client.lib.version}</version>
		</dependency>

		<dependency>
			<groupId>com.bloxbean.cardano</groupId>
			<artifactId>cardano-client-crypto</artifactId>
			<version>${cardano.client.lib.version}</version>
		</dependency>

		<dependency>
			<groupId>com.bloxbean.cardano</groupId>
			<artifactId>cardano-client-common</artifactId>
			<version>${cardano.client.lib.version}</version>
		</dependency>

		<dependency>
			<groupId>com.bloxbean.cardano</groupId>
			<artifactId>cardano-client-cip8</artifactId>
			<version>${cardano.client.lib.version}</version>
		</dependency>

		<dependency>
			<groupId>com.bloxbean.cardano</groupId>
			<artifactId>cardano-client-backend-koios</artifactId>
			<version>${cardano.client.lib.version}</version>
		</dependency>

		<dependency>
			<groupId>com.bloxbean.cardano</groupId>
			<artifactId>cardano-client-backend-ogmios</artifactId>
			<version>${cardano.client.lib.version}</version>
		</dependency>

		<dependency>
			<groupId>com.bloxbean.cardano</groupId>
			<artifactId>cardano-client-backend-blockfrost</artifactId>
			<version>${cardano.client.lib.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.7.3</version>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>${jjwt.version}</version>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>${jjwt.version}</version>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>${jjwt.version}</version>
		</dependency>
		<dependency>
			<groupId>com.bloxbean.cardano</groupId>
			<artifactId>yaci-store-spring-boot-starter</artifactId>
			<version>${yaci-store.version}</version>
		</dependency>

		<dependency>
			<groupId>com.bloxbean.cardano</groupId>
			<artifactId>yaci-store-governance-spring-boot-starter</artifactId>
			<version>${yaci-store.version}</version>
		</dependency>

		<dependency>
			<groupId>com.bloxbean.cardano</groupId>
			<artifactId>yaci-store-staking-spring-boot-starter</artifactId>
			<version>${yaci-store.version}</version>
		</dependency>

		<dependency>
			<groupId>com.bloxbean.cardano</groupId>
			<artifactId>yaci-store-transaction-spring-boot-starter</artifactId>
			<version>${yaci-store.version}</version>
		</dependency>

		<dependency>
			<groupId>com.bloxbean.cardano</groupId>
			<artifactId>yaci-store-utxo-spring-boot-starter</artifactId>
			<version>${yaci-store.version}</version>
		</dependency>

		<dependency>
			<groupId>com.bloxbean.cardano</groupId>
			<artifactId>yaci-store-epoch-spring-boot-starter</artifactId>
			<version>${yaci-store.version}</version>
		</dependency>

		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>1.6.0</version>
		</dependency>

		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct-processor</artifactId>
			<version>1.6.0</version>
			<scope>provided</scope>
		</dependency>

	</dependencies>

	<build>

		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>
						--add-opens=java.base/java.lang=ALL-UNNAMED
					</jvmArguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>21</source> <!-- or your Java version -->
					<target>21</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.38</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>1.6.0</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>